# motion-testing

./: .canon.yaml  .gitignore  CMakeLists.txt  Makefile  README.md  arm_scenes.go  base_scenes.go  compile.sh  evaluate.go  evaluate_test.go  extended_motion_test.go  go.mod  go.sum  scenes.go  scenes_test.go  xarm6_kinematics.json
.artifact/data/pointcloud/: bun0.pcd  bun000.pcd  bun045.pcd  bun180.pcd  bun270.pcd  bun315.pcd  bun45.pcd  bun90.pcd  collision_pointcloud_0.pcd  hello.json  test_short.pcd
.artifact/data/slam/: locating_in_map.lua  mapping_new_map.lua  updating_a_map.lua
.artifact/data/slam/example_cartographer_outputs/viam-office-02-22-1/internal_state/: internal_state_0.pbstream  internal_state_1.pbstream  internal_state_2.pbstream
.artifact/data/slam/example_cartographer_outputs/viam-office-02-22-1/pointcloud/: pointcloud_10.pcd  pointcloud_11.pcd  pointcloud_12.pcd  pointcloud_13.pcd  pointcloud_14.pcd  pointcloud_15.pcd  pointcloud_5.pcd  pointcloud_6.pcd  pointcloud_7.pcd  pointcloud_8.pcd  pointcloud_9.pcd
.artifact/data/slam/example_cartographer_outputs/viam-office-02-22-1/position/: position_0.json  position_1.json  position_11.json  position_12.json  position_13.json  position_14.json  position_15.json  position_2.json  position_3.json  position_4.json  position_5.json  position_6.json  position_7.json  position_8.json  position_9.json
.artifact/data/slam/example_cartographer_outputs/viam-office-02-22-2/internal_state/: internal_state_0.pbstream  internal_state_1.pbstream  internal_state_2.pbstream
.artifact/data/slam/example_cartographer_outputs/viam-office-02-22-2/pointcloud/: pointcloud_0.pcd  pointcloud_1.pcd  pointcloud_2.pcd  pointcloud_3.pcd  pointcloud_4.pcd  pointcloud_5.pcd  pointcloud_7.pcd
.artifact/data/slam/mock_lidar/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
.artifact/data/slam/rplidar_data/: rplidar_data_0.pcd
cmd/: main.go
cmd-cli/: main.go
cmd/gen_plan/: main.go
cmd/plan_motion/: main.go
data/: sanding1.json
include/motion-testing/interfaces/: ArmPlanningEvalInterface.hpp
include/ompl-evaluation/interfaces/: ArmPlanningEvalInterface.hpp  ArmPlanningInterface.hpp
omplbindings/: .gitignore  bindings.go  bindings_test.go  evaluate.go  evaluate_test.go  foo.c  go.mod  go.sum  makelib.sh  scenes.go  scenes.h  scenes_test.go
results/: resultsCharts.R
scripts/: execute_ompl_tests.sh  move_arm_with_plan.go  move_arm_with_plan.py
src/: eval_emptyworld.cpp  planning_evaluator.cpp
src/archive/: simplesetup_demo.cpp
src/interfaces/: ArmPlanningEvalInterface.cpp  ArmPlanningInterface.cpp
srdf/: ur5e.srdf
urdf/: ur5e.urdf
(+55 files in other folders)
